tests/paczka2/big_fuzzy/93621406.err
Error in line 23: BNK94OMTM A58 72,7
Error in line 26: BNK94OMTM A218 -3,3
Error in line 21: jZRkX5gJGB A863 35,3
Error in line 25: A250 A863 4,0
Error in line 24: BNK94OMTM A218 68,2
Error in line 30: A250 A218 16,8
Error in line 45: DFYvAgDovDy A218 31,8
Error in line 42: Yy2wzVpSr A863 76,5
Error in line 46: BNK94OMTM A250 30,3
Error in line 48: Yy2wzVpSr A218 17,3
Error in line 50: BNK94OMTM A863 14,6
Error in line 51: A250 A58 9,3
Error in line 62: A250 A250 32,18
Error in line 53: DFYvAgDovDy A863 30,8
Error in line 56: DsJx A250 64,9
Error in line 64: BNK94OMTM A250 49,9
Error in line 60: A250 A250 86,2
Error in line 73: A250 A218 85,9
Error in line 79: A250 A58 71,8
Error in line 80: A250 A863 0,4
Error in line 82: yWoqu A58 68,9
Error in line 75: Yy2wzVpSr A250 81,7
Error in line 88: Yy2wzVpSr A58 22,5
Error in line 99: yWoqu A58 49,0
Error in line 116: BNK94OMTM A218 94,1
Error in line 120: BNK94OMTM A250 174,86
Error in line 115: DsJx A250 73,7
Error in line 118: A250 A218 73,8
Error in line 124: A250 A863 55,2
Error in line 128: BNK94OMTM A250 152,1
Error in line 144: yWoqu A218 73,4
Error in line 146: yWoqu A863 90,3
Error in line 150: yWoqu A58 61,9
Error in line 162: jZRkX5gJGB A250 60,67
Error in line 166: jZRkX5gJGB A58 55,4
Error in line 163: Yy2wzVpSr A218 18,7
Error in line 173: DFYvAgDovDy A250 67,9
Error in line 188: Yy2wzVpSr A218 106,71
Error in line 185: DFYvAgDovDy A218 18,7
Error in line 196: BNK94OMTM A218 25,2
Error in line 199: BNK94OMTM A250 50,2
Error in line 187: Yy2wzVpSr A218 64,3
Error in line 223: DFYvAgDovDy A218 53,6
Error in line 225: Yy2wzVpSr A58 26,2
Error in line 220: BNK94OMTM A218 26,5
Error in line 227: DFYvAgDovDy A58 50,7
Error in line 244: DsJx A863 12,8
Error in line 237: A250 A863 13,3
Error in line 246: A250 A250 4,9
